<resources>
    <string name="app_name">App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>


    <string name="login_by_password">password</string>
    <string name="login_by_verifycode">verifycode</string>
    <string name="phone_number">phone number:</string>
    <string name="input_phone_number">(XXX)-XXX-XXXX</string>
    <string name="login_password">password:</string>
    <string name="input_password">numbers only</string>
    <string name="forget_password">forget password?</string>
    <string name="remember_password">remember password</string>
    <string name="login">login</string>
    <string name="input_new_password">new password:</string>
    <string name="input_new_password_hint">new password</string>
    <string name="confirm_new_password">confirm password:</string>
    <string name="input_new_password_again">confirm password</string>
    <string name="verifycode">verifycode:</string>
    <string name="input_verifycode">verifycode</string>
    <string name="get_verifycode">get verifycode</string>
    <string name="done">confirm</string>
    <string name="sign_up">sign up</string>


</resources>